force-app/main/default/objects/Portfolio_Achievement__c/Portfolio_Achievement__c.object-meta.xml
<CustomObject>
    <label>Portfolio Achievement</label>
    <nameField>
        <label>Achievement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolio Achievements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject> 