force-app/main/default/objects/Portfolio_Achievement__c/fields/Metric__c.field-meta.xml
<CustomField>
    <fullName>Metric__c</fullName>
    <label>Metric</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 