force-app/main/default/objects/Portfolio_Achievement__c/fields/Portfolio_Experience__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Experience__c</fullName>
    <label>Portfolio Experience</label>
    <referenceTo>Portfolio_Experience__c</referenceTo>
    <relationshipLabel>Portfolio Achievements</relationshipLabel>
    <relationshipName>Portfolio_Achievements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField> 