force-app/main/default/objects/Portfolio_Achievement__c/listViews/All_Achievements.listView-meta.xml
<ListView>
    <fullName>All_Achievements</fullName>
    <columns>NAME</columns>
    <columns>Portfolio_Experience__c</columns>
    <columns>Display_Order__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Achievements</label>
</ListView> 